Fix invisible selection area

--- a/styles.css
+++ b/styles.css
@@ -170,20 +170,20 @@ main {
     background: linear-gradient(45deg, #ff74f0, #a114a5);
 }
 
-.demo .selection-area {
+.selection-area {
     background: rgba(46, 115, 252, 0.11);
     border: 1px solid rgba(98, 155, 255, 0.85);
     border-radius: 0.15em;
 }
 
-.demo .info p {
+.info p {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
 
-.demo .key {
+.key {
     display: inline-block;
     font-weight: bold;
     text-transform: uppercase;
